Fixes: spacings of new messages separator

--- a/components/threading/thread_viewer/thread_viewer.scss
+++ b/components/threading/thread_viewer/thread_viewer.scss
@@ -8,7 +8,26 @@
         text-align: left !important;
     }
 
+    .new-separator {
+        .NotificationSeparator {
+            padding-top: 0;
+        }
+
+        & + .post {
+            padding-top: 1em !important;
+        }
+    }
+
+    .post-right-comments-container > .new-separator,
+    .post + .new-separator {
+        .NotificationSeparator {
+            padding-top: 1em;
+        }
+    }
+
     .Separator + .new-separator {
-        padding-top: 1em;
+        .NotificationSeparator {
+            padding-top: 2em;
+        }
     }
 }
